WISE/wise-iac/helm-repo/jenkins/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
  labels:
    app: jenkins
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/part-of: jenkins
