WISE/wise-iac/helm-repo/jenkins/deployment.yaml
apiVersion: apps/v1 # for versions before 1.7.0 use apps/v1beta1
kind: Deployment
metadata:
  name: jenkins-deployment
  namespace: jenkins
  labels: 
    app: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: jenkins/jenkins:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /var/run/docker.sock
          name: docker-socket-volume
      volumes:
      - name: docker-socket-volume
        hostPath:
          path: /var/run/docker.sock
          type: File
