WISE/wise-iac/helm-repo/jenkins/ingress-jenkins.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-external
    nginx.ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: jenkins
  namespace: jenkins
spec:
  tls:
  - hosts:
      - "*.sbx.wise.us"
    secretName: star.sbx.wise.us
  rules:
    - host: jenkins.sbx.wise.us
      http:
        paths:
          - path: "/"
            backend:
              serviceName: jenkins
              servicePort: 8080
